# lstmppo

./: .gitignore  Debug.ipynb  Dockerfile  LICENSE  Makefile  README.md  cpu_tests.txt  errors.txt  pyproject.toml  pytest.ini  rl_dashboard_streamlit.py  run_dashboard.py  run_experiment.py  train.py  train_rich.py  train_with_dashboard.py
.github/workflows/: docker-build.yaml  fast-checks.yml  gpu-tests.yaml  tests.yml
docs/: runtime_env_info.md
lstmppo/: agent.py  buffer.py  dashboard.py  env.py  init.py  learning_sch.py  obs_encoder.py  policy.py  rl_dashboard.py  runtime_env_info.py  seed.py  trainer.py  trainer_renderers.py  trainer_state.py  types.py
lstmppo/diagnostics/: recurrent,oy  recurrent.py
lstmppo/logging/: jsonl_logger.py  tensorboard_logger.py
tb_logs/popgym-PositionOnlyCartPoleEasy-v0__RLWarmup__351530767__1766683383/: events.out.tfevents.1767389003.spark-3f04.1837338.0  events.out.tfevents.1767389009.spark-3f04.1837338.1  events.out.tfevents.1767389015.spark-3f04.1837338.2
tests/: CONTRIBUTING_TESTS.md  README.md  test_recurrent_ppp.py
tests/cpu/: InvariantHierachy.md  README.md  conftest.py  test_cell_state_drift_accumulates_over_time.py  test_cell_state_saturation.py  test_config.py  test_drift_growth_rate.py  test_drift_growth_smoothness.py  test_drift_variance_stability.py  test_gae.py  test_gate_drift_monotonicity.py  test_gate_entropy_decreases_with_saturation.py  test_gate_saturation_increases_with_extreme_inputs.py  test_gate_to_cell_correlation.py  test_hidden_state_drift_accumulates_over_time.py  test_hidden_vs_cell_drift_ratio.py  test_lstm_gate_detached.py  test_lstm_gate_shapes.py  test_policy_forward_shapes.py  test_policy_lstm_determinism.py  test_policy_lstm_only_mode.py  test_policy_minibatch_consistency.py  test_ppo_kl_watchdog.py  test_ppo_losses.py  test_ppo_value_monotonicity.py  test_rollout_buffer.py
tests/cpu/aux_pred/: conftest.py  test_aux_gradients.py  test_aux_targets_alignment.py  test_aux_targets_tbptt_chunks.py
tests/cpu/drifts/: README.md  test_cell_state_drift_accumulates_over_time.py  test_drift_growth_rate.py  test_drift_growth_smoothness.py  test_drift_saturation_correlation.py  test_drift_saturation_coupling.py  test_drift_variance_stability.py  test_gate_drift_monotonicity.py  test_hidden_state_drift_accumulates_over_time.py  test_hidden_vs_cell_drift_ratio.py  test_lstm_long_horizon_stability.py
tests/cpu/gates/: README.md  test_combined_gate_saturation_increases_with_extreme_inputs.py  test_gate_diagnostics_time_major_vs_batch_major.py  test_gate_entropy_decreases_with_saturation.py  test_gate_to_cell_correlation.py  test_lstm_gate_detached.py  test_lstm_gate_shapes.py  (+2 more)
tests/cpu/infra/: README.md  test_config.py  (+3 more)
tests/gpu/: README.md  conftest.py  test_recurrent_core.py  test_recurrent_diagnostics.py  test_recurrent_invariants.py
tests/helpers/: fake_batch.py  fake_buffer_loader.py  fake_policy.py  fake_rollout.py  fake_state.py  runtime_env.py
(+12 files in other folders)
