[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lstmppo"
version = "0.1.0"
description = "Research-grade LSTM PPO implementation with diagnostics"
authors = [
    { name = "Sean" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["lstmppo*"]