[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lstmppo"
version = "0.1.0"
description = "Research-grade LSTM PPO implementation with diagnostics"
authors = [
    { name = "Sean" }
]
readme = "README.md"
requires-python = ">=3.10"

# Runtime dependencies
dependencies = [
    "torch>=2.0",
    "numpy>=1.23",
    "gymnasium>=0.29",
    "popgym>=0.1.0",
    "matplotlib>=3.7",
    "tqdm>=4.65",
    "tyro>=0.5",
    "tensorboard>=2.14",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff",
    "mypy"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["lstmppo*"]