[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lstmppo"
version = "0.1.0"
description = "Research-grade LSTM PPO implementation with diagnostics"
authors = [{ name = "Sean" }]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "torch>=2.0",
    "numpy>=1.23",
    "gymnasium>=0.29",
    "popgym>=0.1.0",
    "matplotlib>=3.7",
    "tqdm>=4.65",
    "tyro>=0.5",
    "tensorboard>=2.14",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "black>=24.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["lstmppo*"]

# -----------------------------
# Ruff configuration
# -----------------------------
[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
extend-select = ["I"]
ignore = ["E203"]  # black compatibility

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# -----------------------------
# Black configuration
# -----------------------------
[tool.black]
line-length = 120
target-version = ["py310"]

# -----------------------------
# Pytest configuration
# -----------------------------
[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
markers = [
    "gates: LSTM gate-level invariants",
    "drift: Drift, saturation, and long-horizon stability invariants",
    "policy: Policy-level invariants",
    "ppo: PPO algorithm invariants",
    "infra: Infrastructure and buffer invariants",
]

# -----------------------------
# Mypy configuration
# -----------------------------
[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict = false